# ferric

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.off
.github/workflows/: ci.yml
crates/ferric-agent/: Cargo.toml
crates/ferric-agent/src/: guide.rs  lib.rs  tools.rs
crates/ferric-core/: Cargo.toml
crates/ferric-core/examples/: decoder_layer.rs  det_perf.rs  fabric_probe.rs  generate.rs  kernels_native.rs  matmul_native.rs  metal4_gemm.metal  metal4_tensor_gemm.rs  tiny_llm.rs  transformer_block.rs
crates/ferric-core/src/: demo.rs  kernels.rs  lib.rs
crates/ferric-ffi/: Cargo.toml  README.md  libferric.h
crates/ferric-ffi/bindings/: smoke.c  smoke.mojo  smoke.zig
crates/ferric-ffi/bindings/go/: main.go
crates/ferric-ffi/bindings/swift/: Ferric.swift  module.modulemap
crates/ferric-ffi/src/: lib.rs
crates/ferric-flow/: Cargo.toml
crates/ferric-flow-wasm/: Cargo.toml
crates/ferric-flow-wasm/src/: lib.rs
crates/ferric-flow-wasm/worker-poc/: fixture.json  wrangler.toml
crates/ferric-flow-wasm/worker-poc/.wrangler/cache/: cf.json
crates/ferric-flow-wasm/worker-poc/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
crates/ferric-flow-wasm/worker-poc/.wrangler/tmp/bundle-6sq3mk/: middleware-loader.entry.ts
crates/ferric-flow-wasm/worker-poc/.wrangler/tmp/bundle-NzIb7v/: middleware-insertion-facade.js  middleware-loader.entry.ts
crates/ferric-flow-wasm/worker-poc/.wrangler/tmp/dev-JWshDD/: d14d897579b1e5486aa0cdce0bae93eb3f0e59bb-ferric_flow_wasm_bg.wasm  index.js  index.js.map
crates/ferric-flow-wasm/worker-poc/.wrangler/tmp/dev-wNFHCL/: index.js  index.js.map
crates/ferric-flow-wasm/worker-poc/src/: index.ts
crates/ferric-flow/examples/: build_corpus_index.rs  corpus_emb.json  corpus_rag.rs
crates/ferric-flow/src/: index.rs  lib.rs
crates/ferric-gguf/: Cargo.toml
crates/ferric-gguf/examples/: hdr.rs  lazy.rs  roundtrip.rs  tok.rs
crates/ferric-gguf/src/: lib.rs
crates/ferric-llama/: Cargo.toml
crates/ferric-llama/examples/: buf_wall.rs  moe_layers.rs  moe_probe.rs  moe_verify.rs  run_bonsai.rs  run_lfm2.rs  run_llama.rs  run_llama_quant.rs  run_llama_unified.rs  run_qwen3.rs  run_smollm.rs  run_smollm_gen.rs  run_smollm_kv.rs  t30.rs
crates/ferric-llama/src/: lib.rs  qwen3.rs  qwen35.rs
crates/ferric-llama/testdata/: llama.ids  llama.safetensors
crates/ferric-load/: Cargo.toml
crates/ferric-load/examples/: load_safetensors.rs
crates/ferric-load/src/: lib.rs
crates/ferric-load/testdata/: model.safetensors
crates/ferric-onnx/: Cargo.toml  build.rs
crates/ferric-onnx/examples/: run_attn.rs  run_block.rs  run_mlp.rs  run_projectors.rs  run_struct.rs  run_swiglu.rs
crates/ferric-onnx/src/: lib.rs
crates/ferric-onnx/testdata/: attn.onnx  attn_ref.json  block.onnx  mlp.onnx  ref.json  struct.onnx  swiglu.onnx
crates/ferric-serve/: Cargo.toml
crates/ferric-serve/src/: guide.rs  main.rs  mcp.rs
crates/ferric-tensor/: Cargo.toml
crates/ferric-tensor/examples/: adaptive.rs  autotune.rs  bandwidth.rs  batch.rs  bench.rs  bench_coop2pass.rs  bench_fuse_mm.rs  bench_gdn.rs  bench_q2_0.rs  cat.rs  classify.rs  coop16.rs  coop_gemm.rs  coop_matmul_route.rs  coop_q2_0.rs  coop_q4_k.rs  coop_q5_k.rs  coop_q6_k.rs  coop_q8_0.rs  coop_shape.rs  coop_spike.rs  coverage.rs  devices.rs  dtypes.rs  ebm.rs  ebm_actdescent.rs  ebm_actdescent2.rs  ebm_actdescent3.rs  ebm_arm2.rs  ebm_arm3.rs  ebm_arm3b.rs  ebm_arm3c.rs  ebm_cartfull.rs  ebm_compose.rs  ebm_compose2.rs  ebm_compose3.rs  ebm_compose4.rs  ebm_compose5.rs  ebm_compose6.rs  ebm_compose7.rs  (+121 more)
crates/ferric-tensor/src/: autograd.rs  cpu.rs  dtype.rs  fuse.rs  lib.rs  metal4.rs  metal4_gemm.metal  metal4_gemm.metallib  nn.rs  npu_coreml.rs  optim.rs  sched.rs  ws.rs
crates/ferric-tensor/src/coreml_matmul4d/: metadata.json  model.mil
crates/ferric-tokenizer/: Cargo.toml
crates/ferric-tokenizer/examples/: gpt2.rs  roundtrip.rs  verify_tok.rs
crates/ferric-tokenizer/src/: lib.rs
crates/ferric-web/: .gitignore  Cargo.toml  aisdk.html  bonsai_run.mjs  bonsai_test.html  fabric-demo.html  ferric-provider.js  ferric-tools.js  gemma_web.html  guided.html  index.html  live_test.mjs  lm_test.mjs  package-lock.json  probe.html  probe_test.mjs  render_check.mjs  run.mjs  sgtest.mjs  tt.mjs  tt2.mjs  verify2.mjs
crates/ferric-web/examples/: browser_worker.rs  npu.rs
crates/ferric-web/site/: agent.html  bonsai.html  efa.html  ferric-provider.js  ferric-tools.js  index.html  npu_worker.html  rag.html  tools.html  worker.html
crates/ferric-web/src/: efa.rs  lib.rs
docs/: ARCHITECTURE.md  FABRIC.md  FERRALLOY-INGEST-PLAN.md  FERRITE-INGEST-PLAN.md  FLOW.md  METAL4.md  NPU.md  PORTABILITY-RESEARCH-2026.md  SOTA.md  STRATEGY.md
docs/determinism/: 0001-wgpu-hal-metal-safe-math.patch  0002-naga-spv-nocontraction.patch  WGPU-DETERMINISM.md
docs/upstream/: 0003-naga-msl-fp-contract-off.patch  WGPU-DETERMINISM.md
experiments/npu-oracle/: RESULTS.md  oracle.py
forks/naga/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-core/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-core-deps-apple/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-core-deps-emscripten/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-core-deps-windows-linux-android/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-hal/: .cargo-checksum.json  .cargo_vcs_info.json  FERRIC.md
forks/wgpu-hal/src/metal/: device.rs  mod.rs
forks/wgpu-naga-bridge/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu-types/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  FERRIC.md
forks/wgpu/src/backend/: webgpu.rs
python/: README.md  pyproject.toml
python/ferric/: __init__.py
scripts/: fabric-ci.sh  validate_vs_llamacpp.sh
scripts/npu-models/: README.md  build_conv_models.py  build_models.py
(+3 files in other folders)
