[package]
name = "ferric-ffi"
description = "Ferric's stable C ABI (libferric) — the universal on-ramp. Any language with C FFI (Zig, Mojo, Go, Java, C#, Ruby, C/C++) drives the pure-Rust cross-fabric runtime through this."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ferric"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ferric-core = { path = "../ferric-core", version = "0.1" }
ferric-tensor = { path = "../ferric-tensor", version = "0.1" }
ferric-gguf = { path = "../ferric-gguf", version = "0.1" }
ferric-llama = { path = "../ferric-llama", version = "0.1" }
ferric-tokenizer = { path = "../ferric-tokenizer", version = "0.1" }
ferric-agent = { path = "../ferric-agent", version = "0.1" }
pollster = "0.4"
