[package]
name = "ferric-load"
description = "Ferric weight loading — a pure-Rust safetensors reader (F32/F16/BF16/F64 → f32). How real Llama/SmolVLA checkpoints enter the ecosystem."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["safetensors", "weights", "ai", "llm", "ml"]
categories = ["science"]
exclude = ["testdata/"]

[dependencies]
serde_json = "1"
half = "2"

[dev-dependencies]
ferric-core = { path = "../ferric-core", version = "0.1" }
pollster = "1.0.1"
