[package]
name = "ferric-onnx"
description = "Ferric L3 — a pure-Rust ONNX importer: parse a model graph and run it on Ferric GPU tensor ops. Runs real ONNX (MLP, self-attention, SmolVLA components) matching onnxruntime."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["onnx", "inference", "gpu", "webgpu", "ai"]
categories = ["science", "wasm"]
exclude = ["testdata/"]

[dependencies]
prost = "0.14"
ferric-core = { path = "../ferric-core", version = "0.1" }

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
pollster = "1.0.1"
