[package]
name = "ferric-tensor"
description = "Ferric L2 — a general N-dimensional tensor runtime on the GPU fabric: arbitrary rank, strided views, broadcasting, general reductions, batched matmul (dtypes + autograd next)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tensor", "gpu", "webgpu", "ndarray", "ai"]
categories = ["science", "mathematics"]

[dependencies]
ferric-core = { path = "../ferric-core", version = "0.1" }
wgpu = "30.0.0"
bytemuck = "1.25.1"
flume = "0.12.0"
pollster = "1.0.1"

[dev-dependencies]
pollster = "1.0.1"
half = "2"
