[package]
name = "ferric-tensor"
description = "Ferric L2 — a general N-dimensional tensor runtime on the GPU fabric: arbitrary rank, strided views, broadcasting, general reductions, batched matmul (dtypes + autograd next)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tensor", "gpu", "webgpu", "ndarray", "ai"]
categories = ["science", "mathematics"]

[dependencies]
ferric-core = { path = "../ferric-core", version = "0.1" }
wgpu = "30.0.0"
bytemuck = "1.25.1"
flume = "0.12.0"
pollster = "1.0.1"

[dev-dependencies]
ferric-gguf = { path = "../ferric-gguf" }
pollster = "1.0.1"
half = "2"

# Metal 4 tensor-unit GEMM backend (src/metal4.rs) — macOS only, all vendored.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3"
objc2-core-ml = { version = "0.3", features = [
    "MLModel", "MLModelConfiguration", "MLMultiArray", "MLFeatureValue", "MLFeatureProvider",
    "MLDictionaryFeatureProvider", "MLComputePlan", "MLComputePlanDeviceUsage",
    "MLComputeDeviceProtocol", "MLNeuralEngineComputeDevice", "MLModelStructure",
    "MLModelStructureProgram", "MLModelStructureProgramFunction", "MLModelStructureProgramBlock",
    "MLModelStructureProgramOperation", "block2",
] }
objc2-foundation = "0.3"
half = "2"
block2 = "0.6"
