[package]
name = "ferric-tokenizer"
description = "Ferric tokenizer — a pure-Rust byte-level BPE (GPT-2/tiktoken family): lossless encode/decode, loads vocab.json + merges.txt. The prompt→ids→text glue for end-to-end LLM use."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tokenizer", "bpe", "llm", "nlp", "ai"]
categories = ["text-processing", "science"]

[dependencies]
serde_json = "1"
