[package]
name = "ferric-web"
description = "Ferric browser bindings — the same cross-fabric pure-Rust kernels running in WASM on WebGPU."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["webgpu", "wasm", "gpu", "ai", "browser"]
categories = ["wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferric-core = { path = "../ferric-core", version = "0.1" }
ferric-tensor = { path = "../ferric-tensor", version = "0.1" }
ferric-gguf = { path = "../ferric-gguf", version = "0.1" }
ferric-llama = { path = "../ferric-llama", version = "0.1" }
ferric-tokenizer = { path = "../ferric-tokenizer", version = "0.1" }
ferric-agent = { path = "../ferric-agent", version = "0.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
